# rpi-modulo-cnc

./: README.md
go-cnc/: cnc-secrets.yaml.example  go.mod  go.sum
go-cnc/go-cnc-exe/: go-cnc.go
go-cnc/libgcode/: gcode.go
go-cnc/machine/application/: custom_claims.go  react.go  service.go
go-cnc/machine/control/: controller.go
go-cnc/www/static/js/: app.jsx
go-cnc/www/templates/: index.html
pico-helloworld/: CMakeLists.txt  GNUmakefile
pico-helloworld/include/: tusb_config.h
pico-helloworld/src/: main.c  sbfmt.h  usb_descriptors.c
rust-cnc/blinky-demo/: Cargo.toml
rust-cnc/blinky-demo/src/: main.rs
